tests/ui/unexpected_after_array_element.stderr
error: no rules expected the token `=>`
 --> $DIR/unexpected_after_array_element.rs:5:18
  |
5 |     json!([ true => ]);
  |                  ^^ no rules expected this token in macro call

error: aborting due to previous error

